# openenv-soc-simulator

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  output.txt  push_env.py  pyproject.toml  requirements.txt  test_graders.py  upload_hf.py
env/: __init__.py  env.py  models.py  reward.py  state.py
graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
outputs/: README.md
scenarios/: easy.json  hard.json  medium.json
security_incident_soc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: app.py
tasks/: easy_known_malware.py  hard_ransomware_chain.py  medium_behavioral_attack.py
